--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: DevOps-Gauntlet
+name: DevOps Gauntlet Build & Push
 
 on:
   push:
@@ -6,46 +6,34 @@ on:
       - main
 
 jobs:
-  build-and-deploy:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout repo
-      - name: Checkout code
+      # 1️⃣ Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v3
 
       # 2️⃣ Set up Docker Buildx
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
 
-      # 3️⃣ Login to Docker Hub
-      - name: Login to Docker Hub
+      # 3️⃣ Log in to Docker Hub
+      - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # 4️⃣ Build and push frontend image
-      - name: Build & push frontend
+      # 4️⃣ Build & push frontend image
+      - name: Build and push frontend
         run: |
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/frontend:latest ./frontend
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/frontend:latest
 
-      # 5️⃣ Build and push backend image
-      - name: Build & push backend
+      # 5️⃣ Build & push backend image
+      - name: Build and push backend
         run: |
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/backend:latest ./backend
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/backend:latest
-
-      # 6️⃣ Deploy to EC2 via SSH
-      - name: Deploy on EC2
-        uses: appleboy/ssh-action@v0.1.9
-        with:
-          host: ${{ secrets.EC2_HOST }}
-          username: ec2-user
-          key: ${{ secrets.EC2_KEY }}
-          script: |
-            cd /home/ec2-user/fusionpact-devops-challenge
-            docker-compose pull
-            docker-compose up -d
 
