--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,5 @@
-name: DevOps Gauntlet Build & Push
+# A clear name for the entire workflow
+name: DevOps Gauntlet CI/CD
 
 on:
   push:
@@ -6,34 +7,52 @@ on:
       - main
 
 jobs:
-  build-and-push:
+  # Renamed the job to be more descriptive of all its tasks
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout code
+      # 1. Checkout repository
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4 # Updated to latest version
 
-      # 2️⃣ Set up Docker Buildx
+      # 2. Set up Docker Buildx
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+        uses: docker/setup-buildx-action@v3 # Updated to latest version
 
-      # 3️⃣ Log in to Docker Hub
+      # 3. Log in to Docker Hub
       - name: Log in to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3 # Updated to latest version
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # 4️⃣ Build & push frontend image
+      # 4. Build and push frontend image
       - name: Build and push frontend
         run: |
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/frontend:latest ./frontend
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/frontend:latest
 
-      # 5️⃣ Build & push backend image
+      # 5. Build and push backend image
       - name: Build and push backend
         run: |
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/backend:latest ./backend
           docker push ${{ secrets.DOCKERHUB_USERNAME }}/backend:latest
+          
+      # 6. Deploy to EC2 via SSH
+      - name: Deploy to EC2
+        uses: appleboy/ssh-action@v1.0.3 # Updated to a recent stable version
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }} # Using the secret is better than hardcoding
+          key: ${{ secrets.EC2_KEY }}
+          script: |
+            # Navigate to the project directory on the server
+            cd /home/ec2-user/fusionpact-devops-challenge
+            
+            # Pull the latest images from Docker Hub
+            docker-compose pull
+            
+            # Stop the old containers and start new ones with the new images
+            docker-compose up -d
 
